<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textnama"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/editnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textnama"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"/>

    <TextView
        android:id="@+id/Nama"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/nama"
        android:layout_below="@+id/textnama"
        />
    <EditText
        android:id="@+id/editnama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editnim"
        android:layout_toRightOf="@+id/textnama"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal|numberSigned"/>
    <TextView
        android:id="@+id/tugas"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/nilai_tugas"
        android:layout_below="@+id/Nama"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:inputType="numberSigned|numberDecimal"
        />
    <EditText
        android:id="@+id/editnilaiTugas"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/tugas"
        android:layout_below="@+id/editnama"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="numberSigned|numberDecimal"/>

    <TextView
        android:id="@+id/treepersen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editnama"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/editnilaiTugas"
        android:text="@string/_30" />

    <EditText
        android:id="@+id/edittigapuluh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/treepersen"
        android:layout_below="@+id/editnama"
        android:enabled="false"
        android:ems="4"/>
    <TextView
        android:id="@+id/UTS"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tugas"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:text="@string/nilai_uts"
        android:inputType="numberDecimal|numberSigned"
        />
    <EditText
        android:id="@+id/editnilaiUTS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editnilaiTugas"
        android:ems="5"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/UTS"/>

    <TextView
        android:id="@+id/tigalimapersen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/treepersen"
        android:layout_marginTop="33dp"
        android:layout_toRightOf="@+id/editnilaiTugas"
        android:text="@string/_35" />

    <EditText
        android:id="@+id/edittigalima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittigapuluh"
        android:enabled="false"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tigalimapersen"
        android:ems="4" />

    <TextView
        android:id="@+id/UAS"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UTS"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:text="@string/nilai_uas"
        android:inputType="numberDecimal|numberSigned"
        />
    <EditText
        android:id="@+id/editnilaiUAS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editnilaiUTS"
        android:ems="5"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/UTS"/>

    <TextView
        android:id="@+id/tigalimadua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/treepersen"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="94dp"
        android:layout_toRightOf="@+id/editnilaiTugas"
        android:text="@string/_35" />

    <EditText
        android:id="@+id/edittigalimadua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittigalima"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:layout_toRightOf="@+id/tigalimadua"
        android:ems="4" />
    <TextView
        android:id="@+id/nAkhir"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UAS"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:text="@string/nilai_akhir"

        />
    <EditText
        android:id="@+id/editnilaiAkhir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editnilaiUAS"
        android:ems="10"
        android:enabled="false"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/nAkhir"/>
    <TextView
        android:id="@+id/nHuruf"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nAkhir"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:text="@string/nilai_huruf"
        />
    <EditText
        android:id="@+id/editnilaiHuruf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editnilaiAkhir"
        android:ems="10"
        android:enabled="false"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/nHuruf"/>
    <TextView
        android:id="@+id/Predikat"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nHuruf"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:text="Predikat"
        />
    <EditText
        android:id="@+id/editPredikat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editnilaiHuruf"
        android:ems="10"
        android:enabled="false"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/Predikat"/>
    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_below="@+id/editPredikat"
        android:text="@string/hitung"
        android:onClick="Hitung"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/btn"
        android:layout_below="@+id/editPredikat"
        android:text="@string/keluar"
        android:onClick="Keluar"
        />
</RelativeLayout>